# dynamic-hibernate-compute

./: Cargo.toml  Makefile  README.md
conf/logind.conf.d/: 00-dynamic-hibernate-logind.conf
conf/sleep.conf.d/: 00-dynamic-hibernate-sleep.conf
conf/tmpfiles.d/: dynamic-hibernate.conf
dbus/: org.dynamic_hibernate.DynamicHibernate.conf
src/: config.rs  error.rs  lib.rs  power.rs  sizing.rs
src/dbus/: emitter.rs  mod.rs  notifier.rs
src/probe/: mem.rs  mod.rs  swap.rs  vram.rs  zswap.rs
src/swap/: btrfs.rs  manager.rs  metadata.rs  mod.rs
src/systemd/: boot_control.rs  mod.rs
systemd/: dynamic-hibernate-cleanup.service  dynamic-hibernate-notifier.service  dynamic-hibernate-prepare.service
